--- a/.github/workflows/google-drive-sync.yml
+++ b/.github/workflows/google-drive-sync.yml
@@ -1,21 +1,24 @@
-name: Sync to Google Drive (Unzipped)
+name: Sync to Google Drive
 on:
   push:
     branches:
-      - main
+  - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  - name: Checkout code
+    uses: actions/checkout@v4
 
-      - name: Upload Files Individually
-        uses: adityak74/google-drive-upload-git-action@main
-        with:
-          credentials: ${{ secrets.GDRIVE_CREDENTIALS }}
-          folderId: '1OsDtwOjtFaxsMIYgAXzCKSy2RZ9pCofd'
-          # Providing a path to the folder instead of a zip file
-          uploadSource: '.' 
-          overwrite: "true"
+  - name: Archive for NotebookLM
+    # This creates a single zip which NotebookLM can read as a source
+    run: zip -r codebase.zip . -x "*.git*" "node_modules/*" ".next/*"
+
+  - name: Upload to Drive
+    uses: adityak74/google-drive-upload-git-action@main
+    with:
+      credentials: ${{ secrets.GDRIVE_CREDENTIALS }}
+      folderId: '1OsDtwOjtFaxsMIYgAXzCKSy2RZ9pCofd'
+      filename: codebase.zip
+      overwrite: "true"
