--- a/.github/workflows/google-drive-sync.yml
+++ b/.github/workflows/google-drive-sync.yml
@@ -2,23 +2,25 @@ name: Sync to Google Drive
 on:
   push:
     branches:
-  - main
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-  - name: Checkout code
-    uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  - name: Archive for NotebookLM
-    # This creates a single zip which NotebookLM can read as a source
-    run: zip -r codebase.zip . -x "*.git*" "node_modules/*" ".next/*"
+      - name: Archive for NotebookLM
+        run: zip -r codebase.zip . -x "*.git*" "node_modules/*" ".next/*"
 
-  - name: Upload to Drive
-    uses: adityak74/google-drive-upload-git-action@main
-    with:
-      credentials: ${{ secrets.GDRIVE_CREDENTIALS }}
-      folderId: '1OsDtwOjtFaxsMIYgAXzCKSy2RZ9pCofd'
-      filename: codebase.zip
-      overwrite: "true"
+      - name: Upload to Drive
+        uses: adityak74/google-drive-upload-git-action@main
+        with:
+          credentials: ${{ secrets.GDRIVE_CREDENTIALS }}
+          folderId: '1OsDtwOjtFaxsMIYgAXzCKSy2RZ9pCofd'
+          filename: codebase.zip
+          overwrite: "true"
