--- a/.github/workflows/google-drive-sync.yml
+++ b/.github/workflows/google-drive-sync.yml
@@ -1,4 +1,4 @@
-name: Sync Folder to Google Drive
+name: Sync Zip to Google Drive
 on:
   push:
     branches:
@@ -11,11 +11,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Sync to Drive
-        uses: wei/rclone@v1
-        env:
-          RCLONE_CONFIG_GDRIVE_TYPE: google cloud storage
-          RCLONE_CONFIG_GDRIVE_SERVICE_ACCOUNT_FILE__CONTENT: ${{ secrets.GDRIVE_CREDENTIALS }}
-          RCLONE_CONFIG_GDRIVE_TEAM_DRIVE: ''
+      - name: Create Zip Archive
+        # This zips everything but skips the heavy 'junk' folders
+        run: zip -r codebase_backup.zip . -x "*.git*" "node_modules/*" ".next/*"
+
+      - name: Upload Zip to Drive
+        uses: adityak74/google-drive-upload-git-action@main
         with:
-          args: sync . gdrive:${{ secrets.FOLDER_ID }} --exclude ".git/**" --exclude "node_modules/**" --exclude ".next/**"
+          credentials: ${{ secrets.GDRIVE_CREDENTIALS }}
+          folderId: '1OsDtwOjtFaxsMIYgAXzCKSy2RZ9pCofd'
+          filename: codebase_backup.zip
+          overwrite: "true"
