--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "node": "22.x"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
     "start": "next start"
   },
   "dependencies": {
@@ -41,7 +41,7 @@
     "jspdf": "^2.5.2",
     "jsvectormap": "^1.6.0",
     "lucide-react": "^0.468.0",
-    "next": "15.1.11",
+    "next": "^16.1.6",
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.8.16",
     "prettier": "^3.3.3",
