cart and checkout

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
+    "@stripe/react-stripe-js": "^5.6.0",
+    "@stripe/stripe-js": "^8.7.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/postgrest-js": "^1.21.1",
@@ -57,6 +59,7 @@
     "sass": "^1.87.0",
     "sharp": "0.33.5",
     "sheetjs-style": "^0.15.8",
+    "stripe": "^20.3.1",
     "uuid": "^11.1.0",
     "web-vitals": "^5.0.2",
     "xlsx": "^0.18.5",
