--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "^16.1.6",
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.8.16",
+    "pdf-lib": "^1.17.1",
     "prettier": "^3.3.3",
     "radix-ui": "^1.3.4",
     "react": "19.0.0",
